# outlook-mcp

./: .gitignore  Dockerfile  Makefile  README.md  env_example.txt  mcp_config.json  pyproject.toml  requirements.txt  smithery.yaml
docs/: azure_ad_setup.md  claude_setup.md
scripts/: __init__.py  check_env.py  test_client.py
src/: __init__.py  __main__.py  auth_manager.py  config.py  mcp_server.py  outlook_client.py
